5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1871_2873.log
== TEST (2019-07-02 16:10:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
entrada = 0

for i in range(shape(matriz)[1]):
	entrada = (entrada + matriz[i:,j] * entrada[i:,2])
print(entrada)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:11:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
entrada = 0

for i in range(shape(matriz)[1]):
	for j in range (shape(matriz[j])):
		entrada = (entrada + matriz[i:,j] * entrada[i:,2])
print(entrada)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:11:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
entrada = 0

for i in range(shape(matriz)[1]):
	for j in range (shape(matriz[1])):
		entrada = (entrada + matriz[i:,j] * entrada[i:,2])
print(entrada)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:12:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
entrada = 0

for i in range(shape(matriz)[1]):
	for j in range (shape(matriz)[1]):
		entrada = (entrada + matriz[i:,j] * entrada[i:,2])
print(entrada)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:13:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
entrada = 0

for i in range(shape(matriz)[1]):
	for j in range (shape(matriz)[1]):
		entrada = (entrada + matriz[1:,j] * entrada[i:,2])
print(entrada)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:13:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
entrada = 0

for i in range(shape(matriz)[1]):
	for j in range (shape(matriz)[1]):
		entrada = (entrada + matriz[1:,j] * entrada[i:,2])
print(round(entrada,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:14:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
entrada = 0

for i in range(shape(matriz)[1]):
	for j in range (shape(matriz)[1]):
		entrada = (entrada + matriz[1:,j] * entrada[i:,2])
print(round(entrada,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:14:59) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
entrada = 0

for i in range(shape(matriz)[0]):
	for j in range (shape(matriz)[1]):
		entrada = (entrada + matriz[1:,j] * entrada[i:,2])
print(round(entrada,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:28:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[0]):
	ma = ma + matriz[0:,2] * ma[1:,2]
print(round(ma,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:29:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[0]):
	ma = ma + matriz[i:,0] * matriz[i:,1]
print(round(ma,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:30:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,0] * matriz[i,1]
print(round(ma,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:30:39) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,0] * ma[i,1]
print(round(ma,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:30:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,0] * matriz[i,1]
print(round(ma,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:32:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[0]):
	ma = ma + (matriz[i,0] * matriz[i,1])
print(round(ma,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:32:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[0]):
	ma = (ma + matriz[i,0]) * matriz[i,1
print(round(ma,2))	
-- ERROR:
File "XXXX", line 9
    print(round(ma,2))	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:33:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,0] * matriz[i,1
print(round(ma,2))	
-- ERROR:
File "XXXX", line 9
    print(round(ma,2))	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:33:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,0] * matriz[i,1
print(round(ma,2))	
-- ERROR:
File "XXXX", line 9
    print(round(ma,2))	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:33:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[0]):
	ma = (ma + matriz[i,0]) * matriz[i,1]
print(round(ma,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:33:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,0] * matriz[i,1]
print(round(ma,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:34:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[1]):
	ma = ma + matriz[i,0] * matriz[i,1]
print(round(ma,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:34:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,0] * matriz[i,1]
print(round(ma,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:36:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,0] * matriz[i,1]
ma = ma/3		
print(round(ma,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:36:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,0] * matriz[i,1]
ma = ma/3		
print(round(ma,2))	
-- EXECUTION TIME:
1.02302
-- TEST CASE 1:
---- input:
[[6.8,8.2],[4.2,1.1],[8.4,8.9]]
---- correct output:
45.05
---- user output:
42.25
-- TEST CASE 2:
---- input:
[[6.8,8.2],[5,5],[1.1,2.2]]
---- correct output:
27.73
---- user output:

-- TEST CASE 3:
---- input:
[[6.8,7.7],[5,6],[6.6,4.4]]
---- correct output:
37.13
---- user output:
37.13
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:36:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,0] * matriz[i,1]
ma = mean(ma)	
print(round(ma,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:38:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,0] * matriz[i,1]
media = ma / shape(matriz)[0]
#ma = / 3	
print(round(ma,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:38:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,0] * matriz[i,1]
media = ma / shape(matriz)[0]
#ma = / 3	
print(round(media,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:39:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,0] * matriz[i,1]
media = ma / shape(matriz)[0]
#ma = / 3	
print(round(media,2))	
-- EXECUTION TIME:
1.12036
-- TEST CASE 1:
---- input:
[[6.8,8.2],[4.2,1.1],[8.4,8.9]]
---- correct output:
45.05
---- user output:
42.25
-- TEST CASE 2:
---- input:
[[6.8,8.2],[5,5],[1.1,2.2]]
---- correct output:
27.73
---- user output:

-- TEST CASE 3:
---- input:
[[6.8,7.7],[5,6],[6.6,4.4]]
---- correct output:
37.13
---- user output:
37.13
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:39:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,0] * matriz[i,1]
media = ma / shape(matriz)[0]
#ma = / 3	
print(round(media,2))	
-- EXECUTION TIME:
0.859959
-- TEST CASE 1:
---- input:
[[6.8,8.2],[4.2,1.1],[8.4,8.9]]
---- correct output:
45.05
---- user output:
42.25
-- TEST CASE 2:
---- input:
[[6.8,8.2],[5,5],[1.1,2.2]]
---- correct output:
27.73
---- user output:

-- TEST CASE 3:
---- input:
[[6.8,7.7],[5,6],[6.6,4.4]]
---- correct output:
37.13
---- user output:
37.13
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:39:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,0] * matriz[i,1]
media = ma / shape(matriz)[0]
#ma = / 3	
print(round(media,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:41:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,0] * matriz[i,1]
media = ma / range(shape(matriz)[0])	

print(round(media,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:41:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,0] * matriz[i,1]
media = ma / (shape(matriz)[0])

print(round(media,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:41:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,0] * matriz[i,1]
media = ma / (shape(matriz)[0])

print(round(media,2))	
-- EXECUTION TIME:
1.03419
-- TEST CASE 1:
---- input:
[[6.8,8.2],[4.2,1.1],[8.4,8.9]]
---- correct output:
45.05
---- user output:
42.25
-- TEST CASE 2:
---- input:
[[6.8,8.2],[5,5],[1.1,2.2]]
---- correct output:
27.73
---- user output:

-- TEST CASE 3:
---- input:
[[6.8,7.7],[5,6],[6.6,4.4]]
---- correct output:
37.13
---- user output:
37.13
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:42:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,0] * matriz[i,1]
media = ma / (shape(matriz)[0])

print(round(media,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:43:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[1]):
	ma = ma + matriz[i,0] * matriz[i,1]
media = ma / (shape(matriz)[0])

print(round(media,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:43:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,0] * matriz[i,1]
media = ma / (shape(matriz)[0])

print(round(media,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:44:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,0] * matriz[i,1]
media = ma / (shape(matriz)[0])

print(round(media,2))	
-- EXECUTION TIME:
1.04483
-- TEST CASE 1:
---- input:
[[6.8,8.2],[4.2,1.1],[8.4,8.9]]
---- correct output:
45.05
---- user output:
42.25
-- TEST CASE 2:
---- input:
[[6.8,8.2],[5,5],[1.1,2.2]]
---- correct output:
27.73
---- user output:

-- TEST CASE 3:
---- input:
[[6.8,7.7],[5,6],[6.6,4.4]]
---- correct output:
37.13
---- user output:
37.13
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:53:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,0] * matriz[i,1]
media = ma / (shape(matriz)[0])

print(round(media,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:54:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))
ma = 0

for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,0] * matriz[i,1]
media = ma / (shape(matriz)[0])

print(round(media,2))	
-- EXECUTION TIME:
0.967057
-- TEST CASE 1:
---- input:
[[6.8,8.2],[4.2,1.1],[8.4,8.9]]
---- correct output:
45.05
---- user output:
42.25
-- TEST CASE 2:
---- input:
[[6.8,8.2],[5,5],[1.1,2.2]]
---- correct output:
27.73
---- user output:

-- TEST CASE 3:
---- input:
[[6.8,7.7],[5,6],[6.6,4.4]]
---- correct output:
37.13
---- user output:
37.13
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
